<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tenant_acc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_semibold"
            android:text="@string/tenant_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:fontFamily="@font/outfit_regular"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tenant_acc_tv"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/btn_segmented"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_tv">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_post_new_job"
                style="@style/Widget.MaterialButtonToggleGroup.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/post_new_job"
                app:cornerRadius="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_inprogress"
                style="@style/Widget.MaterialButtonToggleGroup.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/in_progress" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_completed"
                style="@style/Widget.MaterialButtonToggleGroup.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/completed"
                app:cornerRadius="4dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_segmented" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>