<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".Registration">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <!-- Wave shape at the top -->
            <FrameLayout
                android:id="@+id/wave_top"
                android:layout_width="0dp"
                android:layout_height="@dimen/_140sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/blue_wave" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/white_texture" />
            </FrameLayout>


            <TextView
                android:id="@+id/registration_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/registration"
                android:textColor="@color/black"
                android:textSize="@dimen/_30ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wave_top" />

            <View
                android:id="@+id/underline"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_3sdp"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="@+id/registration_tv"
                app:layout_constraintTop_toBottomOf="@+id/registration_tv" />



            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/underline" />
            <EditText
                android:id="@+id/name_et"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.9"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/silver_round_shape"
                android:fontFamily="@font/outfit_regular"
                android:paddingVertical="5sp"
                android:hint="@string/enter_name"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/silver"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_tv" />



            <TextView
                android:id="@+id/contact_number_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/contact_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_et" />
            <EditText
                android:id="@+id/contact_number_et"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.9"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/silver_round_shape"
                android:fontFamily="@font/outfit_regular"
                android:paddingVertical="5sp"
                android:hint="@string/enter_contact_number"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/silver"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_number_tv" />

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_number_et" />
            <EditText
                android:id="@+id/email_et"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.9"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/silver_round_shape"
                android:fontFamily="@font/outfit_regular"
                android:paddingVertical="5sp"
                android:hint="@string/enter_email"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/silver"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_tv" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:backgroundTint="@color/blue"
                android:text="@string/submit"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_et"
                app:layout_constraintWidth_percent="0.8" />


            <TextView
                android:id="@+id/already_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/already_a_registered_user"
                android:textColor="@color/silver"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="@+id/submit_btn"
                app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

            <TextView
                android:id="@+id/sign_in_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toEndOf="@+id/already_register"
                app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>