<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <!-- Wave shape at the top -->
    <FrameLayout
        android:id="@+id/wave_top"
        android:layout_width="0dp"
        android:layout_height="@dimen/_140sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/blue_wave" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/white_texture" />
    </FrameLayout>



    <TextView
        android:id="@+id/signup_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/_30ssp"
        android:fontFamily="@font/outfit_semibold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave_top" />

    <View
        android:id="@+id/underline"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_3sdp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="@+id/signup_tv"
        app:layout_constraintTop_toBottomOf="@+id/signup_tv" />


    <TextView
        android:id="@+id/chose_one_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/please_choose_one_to_continue"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline" />
        
        <TextView
            android:id="@+id/owner_tv"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:text="@string/owner"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/silver"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chose_one_tv" />


        <TextView
            android:id="@+id/tenant_tv"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/tenant"
            android:textColor="@color/silver"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_tv" />


        <TextView
            android:id="@+id/owner_and_tenant_tv"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/owner_and_tenant_both"
            android:textColor="@color/silver"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tenant_tv" />


        <TextView
            android:id="@+id/mantinance_company_tv"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/maintenance_company"
            android:textColor="@color/silver"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_and_tenant_tv" />



        <TextView
            android:id="@+id/service_provider_tv"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/service_provider"
            android:textColor="@color/silver"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mantinance_company_tv" />


        <TextView
            android:id="@+id/mantinance_and_service_provider_tv"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/maintenance_and_service_provider"
            android:textColor="@color/silver"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_provider_tv" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/blue"
            android:text="@string/str_continue"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mantinance_and_service_provider_tv"
            app:layout_constraintWidth_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>